Mise en place de project et avis

--- a/.env
+++ b/.env
@@ -42,6 +42,7 @@ MAILER_DSN=smtp://127.0.0.1:1025
 CONTACT_TO_EMAIL=AMD37@gmail.com
 
 ###> karser/karser-recaptcha3-bundle ###
-RECAPTCHA_SITE_KEY=6Ldc5morAAAAAOyhS9VsfNknEiOoAY3a8E4QLB8K
-RECAPTCHA_SECRET_KEY=6Ldc5morAAAAAAiGZoU8q8r0RSr_2CjobPX9wat0
+# Get your API key and secret from https://g.co/recaptcha/v3
+RECAPTCHA3_KEY=6LeLp4IrAAAAAJP8iBouusTkNqjDTs2tdTk6nZ2v
+RECAPTCHA3_SECRET=6LeLp4IrAAAAAE6ZdO362NUD1YiGhetpgm-3Txq2
 ###< karser/karser-recaptcha3-bundle ###
