--- a/config/packages/karser_recaptcha3.yaml
+++ b/config/packages/karser_recaptcha3.yaml
@@ -1,3 +1,5 @@
 karser_recaptcha3:
-    secret_key: '%env(RECAPTCHA_SECRET_KEY)%'
-    site_key: '%env(RECAPTCHA_SITE_KEY)%'
+    site_key: '%env(RECAPTCHA3_KEY)%'
+    secret_key: '%env(RECAPTCHA3_SECRET)%'
+    score_threshold: 0.5
+    enabled: true
