--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,11 +4,22 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        users_in_memory:
+            memory:
+                users:
+                    admin:
+                        password: '$2y$13$2516YHa6ghtkvPJpLI5DF.n5s/y8xMXBvEwd34tiJMm8XUJMOFAtC' # davidhugo
+                        roles: ['ROLE_ADMIN']
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        admin:
+            pattern: ^/admin
+            http_basic: ~
+            provider: users_in_memory
+            logout:
+                path: /admin/logout
         main:
             lazy: true
             provider: users_in_memory
@@ -22,7 +33,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/avis/new, roles: ROLE_ADMIN }
+        - { path: ^/avis/\d+/edit, roles: ROLE_ADMIN }
+        - { path: ^/avis/\d+/delete, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
