--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     contact.to_email: '%env(CONTACT_TO_EMAIL)%'
-    recaptcha_site_key: '%env(RECAPTCHA_SITE_KEY)%'
+    recaptcha_site_key: '%env(RECAPTCHA3_KEY)%'
 
 
 services:
